2007-12-06  Martin Lambers <marlam@marlam.de>

	* mhlib/mh_os.h: Add MH_STDIN, MH_STDOUT.

2007-11-08  Martin Lambers <marlam@marlam.de>

	* src/conf.cpp: Save doubles with enough precision.

2007-10-28  Martin Lambers <marlam@marlam.de>

	* doc/cvltonemap.texi: Fix filename of info file.

2007-10-16  Martin Lambers <marlam@marlam.de>

	* src/cvltonemap.cpp: Print CVL version in AboutBox.
	* configure.ac: Require CVL >= 0.2.2.

2007-10-09  Martin Lambers <marlam@marlam.de>

	* mhlib/mh_os.h, mhlib/mh_os.c, src/main.cpp: Rename DIRSEP to
	MH_DIRSEP. Update the users accordingly.

2007-09-13  Martin Lambers <marlam@marlam.de>

	* src/view_area.cpp: Skip postprocessing if it is not necessary.

2007-09-09  Martin Lambers <marlam@marlam.de>

	* configure.ac: Remove unused --debug option for configure script.
	* configure.ac, doc/cvlview.texi, doc/cvlview.1: Bump version numbers
        and dates for 0.1.1.
	* NEWS: Update for 0.1.1.
	* doc/Makefile.am: Distribute man page.

2007-09-05  Martin Lambers <marlam@marlam.de>

	* Force initializeGL() in constructor. This prevents potential
	segfaults when other parts of the application use our GL context for
	CVL calls.

2007-09-04  Martin Lambers <marlam@marlam.de>

	* Update information in the AboutBox.

2007-09-03  Martin Lambers <marlam@marlam.de>

	* Allow to save/load parameter sets.
	* Use CVLTonemap instead of CVLToneMap internally.
	* Use different sets of postprocessing parameters for each tone
	mapping method.
	* Fix Gamma Slider.
	* Split controls for maximum absolute luminance into its own file,
	because all future tone mapping operators will need it. Improve the
	slider.

2007-08-31  Martin Lambers <marlam@marlam.de>

	* Initial public release.