@@ -1,6 +1,7 @@
 2007-12-06  Martin Lambers <marlam@marlam.de>
 
 	* mhlib/mh_os.h: Add MH_STDIN, MH_STDOUT.
+	* src/cvltonemap.cpp: Show filename in window title.
 
 2007-11-08  Martin Lambers <marlam@marlam.de>
 
